--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                             </div>
                         </div>
 
-                        <p class="testimonial_description">I get a good impression, I carry out my project with all the possible quality and attention and support 24 hours a day
+                        <p class="testimonial_description">because he is bery handsam
                         </p>
                     </div>
 
