--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                             </div>
                         </div>
 
-                        <p class="testimonial_description">I get a good impression, I carry out my project with all the possible quality and attention and support 24 hours a day
+                        <p class="testimonial_description">he is bery amazing and good at making our requested prajik
                         </p>
                     </div>
 
@@ -851,7 +851,7 @@
                             </div>
                         </div>
 
-                        <p class="testimonial_description">I get a good impression, I carry out my project with all the possible quality and attention and support 24 hours a day
+                        <p class="testimonial_description">such a handsam man good at what hes doing and very goodlooking guy
                         </p>
                     </div>
                 </div>
@@ -979,7 +979,7 @@
 <script>
     new kursor({
     type: 1,
-    removeDefaultCursor: true,
+    removeDefaultCursor: false,
     color: "#e5003d"
 });
 </script>
