--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home_blob-img" x='12' y='18' xlink:href="assets/img/perfil.png" />
+                                <image class="home_blob-img" x='12' y='18' xlink:href="assets/img/me2.png" />
                             </g>
                         </svg>
                     </div>
@@ -144,7 +144,7 @@
             <span class="section_subtitle">My Introduction</span>
 
             <div class="about_container container grid">
-                <img src="assets/img/about.jpg" alt="" class="about_img">
+                <img src="assets/img/pic8.jpg" alt="" class="about_img">
 
                 <div class="about_data">
                     <p class="about_description">I grow through bold and strategic creative, focused on searching new
