--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                     <div class="testimonial_content swiper-slide">
                         <div class="testimonial_data">
                             <div class="testimonial_header">
-                                <img src="assets/img/testimonial2.jpg" alt="" class="testimonial_img">
+                                <img src="assets/img/neil.png" alt="" class="testimonial_img">
 
                                 <div>
                                     <h3 class="testimonial_name">Neil Bryan Escaner</h3>
@@ -834,7 +834,7 @@
                     <div class="testimonial_content swiper-slide">
                         <div class="testimonial_data">
                             <div class="testimonial_header">
-                                <img src="assets/img/testimonial3.jpg" alt="" class="testimonial_img">
+                                <img src="assets/img/lala.jpg" alt="" class="testimonial_img">
 
                                 <div>
                                     <h3 class="testimonial_name">Lowela Relacion</h3>
