change some few things

--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@
 
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">08+</span>
+                            <span class="about_info-title">2</span>
                             <span class="about_info-name">Years <br> Experience</span>
                         </div>
 
                         <div>
-                            <span class="about_info-title">1+</span>
+                            <span class="about_info-title">3</span>
                             <span class="about_info-name">Completed <br> Project</span>
                         </div>
 
                         <div>
-                            <span class="about_info-title">05+</span>
-                            <span class="about_info-name">Companies <br> Worked</span>
+                            <span class="about_info-title"></span>
+                            <span class="about_info-name"> <br> </span>
                         </div>
                     </div>
                     <div class="about_buttons">
@@ -419,7 +419,7 @@
                                 <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    2020 - 2023
                                 </div>
                             </div>
 
@@ -439,11 +439,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification_title">Web Designer</h3>
+                                <h3 class="qualification_title">BSIT</h3>
                                 <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    2020 - 2023
                                 </div>
                             </div>
                         </div>
@@ -451,11 +451,11 @@
                         <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification_data">
                             <div>
-                                <h3 class="qualification_title">UI Designer</h3>
+                                <h3 class="qualification_title">STEM</h3>
                                 <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    2019 - 2020
                                 </div>
                             </div>
 
@@ -475,11 +475,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification_title">Software Engineer</h3>
+                                <h3 class="qualification_title">STEM</h3>
                                 <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    2019 - 2020
                                 </div>
                             </div>
                         </div>
@@ -491,17 +491,17 @@
                         <!--==================== QUALIFICATION 1 ====================-->
                         <div class="qualification_data">
                             <div>
-                                <h3 class="qualification_title">Front-End Developer</h3>
-                                <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
+                                <!-- <h3 class="qualification_title">Front-End Developer</h3> -->
+                                <!-- <span class="qualification_subtitle">UM - DIGOS COLLEGE</span> -->
                                 <div class="qualification_calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    <!-- <i class="uil uil-calendar-alt"></i> -->
+                                    <!-- 2024 - 2025     -->
                                 </div>
                             </div>
 
                             <div>
-                                <span class="qualification_rounder"></span>
-                                <span class="qualification_line"></span>
+                                <!-- <span class="qualification_rounder"></span> -->
+                                <!-- <span class="qualification_line"></span> -->
                             </div>
                         </div>
                         
@@ -510,16 +510,16 @@
                             <div></div>
 
                             <div>
-                                <span class="qualification_rounder"></span>
-                                <span class="qualification_line"></span>
+                                <!-- <span class="qualification_rounder"></span> -->
+                                <!-- <span class="qualification_line"></span> -->
                             </div>
 
                             <div>
-                                <h3 class="qualification_title">Back-End Developer</h3>
-                                <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
+                                <!-- <h3 class="qualification_title">Back-End Developer</h3> -->
+                                <!-- <span class="qualification_subtitle">UM - DIGOS COLLEGE</span> -->
                                 <div class="qualification_calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    <!-- <i class="uil uil-calendar-alt"></i> -->
+                                    <!-- 2024 - 2025 -->
                                 </div>
                             </div>
                         </div>
@@ -527,17 +527,17 @@
                         <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification_data">
                             <div>
-                                <h3 class="qualification_title">Web Developer</h3>
-                                <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
+                                <!-- <h3 class="qualification_title">Web Developer</h3> -->
+                                <!-- <span class="qualification_subtitle">UM - DIGOS COLLEGE</span> -->
                                 <div class="qualification_calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    <!-- <i class="uil uil-calendar-alt"></i> -->
+                                    <!-- 2024 - 2025 -->
                                 </div>
                             </div>
 
                             <div>
-                                <span class="qualification_rounder"></span>
-                                <span class="qualification_line"></span>
+                                <!-- <span class="qualification_rounder"></span> -->
+                                <!-- <span class="qualification_line"></span> -->
                             </div>
                         </div>
 
@@ -546,16 +546,16 @@
                             <div></div>
 
                             <div>
-                                <span class="qualification_rounder"></span>
+                                <!-- <span class="qualification_rounder"></span> -->
                                 <!-- <span class="qualification_line"></span> -->
                             </div>
 
                             <div>
-                                <h3 class="qualification_title">Network Engineer</h3>
-                                <span class="qualification_subtitle">UM - DIGOS COLLEGE</span>
+                                <!-- <h3 class="qualification_title">Network Engineer</h3> -->
+                                <!-- <span class="qualification_subtitle">UM - DIGOS COLLEGE</span> -->
                                 <div class="qualification_calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    2024 - 2025
+                                    <!-- <i class="uil uil-calendar-alt"></i> -->
+                                    <!-- 2024 - 2025 -->
                                 </div>
                             </div>
                         </div>
@@ -574,7 +574,7 @@
                 <div class="services_content">
                     <div>
                         <i class="uil uil-web-grid services_icon"></i>
-                        <h3 class="services_title">Ui/Ux <br> Designer</h3>
+                        <h3 class="services_title">UI/UX <br> Designer</h3>
                     </div>
 
                     <span class="button button--flex button--small button--link services_button">
@@ -584,7 +584,7 @@
 
                     <div class="services_modal">
                         <div class="services_modal-content">
-                            <h4 class="services_modal-title">Ui/Ux <br> Designer</h4>
+                            <h4 class="services_modal-title">UI/UX <br> Designer</h4>
                             <i class="uil uil-times services_modal-close"></i>
 
                             <ul class="services_modal-services girid">
@@ -767,7 +767,7 @@
                         </a>
                     </div>
 
-                    <img src="assets/img/project.png" alt="" class="project_img">
+                    <img src="assets/img/me.png" alt="" class="project_img">
                 </div>
             </div>
         </section>
@@ -834,7 +834,7 @@
                     <div class="testimonial_content swiper-slide">
                         <div class="testimonial_data">
                             <div class="testimonial_header">
-                                <img src="assets/img/lala.jpg" alt="" class="testimonial_img">
+                                <img src="assets/img/lalalal.png" alt="" class="testimonial_img">
 
                                 <div>
                                     <h3 class="testimonial_name">Lowela Relacion</h3>
