--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                 </div>
             </div>
 
-            <p class="footer_copy">&#169; GendrixRollon All right Reserved</p>
+            <p class="footer_copy">&#169;2023 - GendrixRollon All Right Reserved</p>
         </div>
     </footer>
 
@@ -892,7 +892,7 @@
 <script src="https://unpkg.com/kursor"></script>
 <script>
     new kursor({
-    type: 1,
+    type: 3,
     removeDefaultCursor: false,
     color: "#e5003d"
 });
