--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <span class="section_subtitle">My Introduction</span>
 
             <div class="about_container container grid">
-                <img src="assets/img/gboi.jpg" alt="" class="about_img">
+                <img src="assets/img/gboi.jpg" alt="gboi" class="about_img">
 
                 <div class="about_data">
                     <p class="about_description">I grow through bold and strategic creative, focused on searching new
@@ -191,7 +191,7 @@
                             <i class="uil uil-brackets-curly skills_icon"></i>
 
                             <div>
-                                <h1 class="skills_titles">Font-End developer</h1>
+                                <h1 class="skills_titles">Font-End Developer</h1>
                                 <span class="skills_subtitle">More than 2 years</span>
                             </div>
                                 <i class="uil uil-angle-down skills_arrow"></i>
@@ -245,7 +245,7 @@
                             <i class="uil uil-server-network skills_icon"></i>
 
                             <div>
-                                <h1 class="skills_titles">Back-End developer</h1>
+                                <h1 class="skills_titles">Back-End Developer</h1>
                                 <span class="skills_subtitle">More than 2 years</span>
                             </div>
 
@@ -782,7 +782,7 @@
         <section class="contact section" id="contact">
             <h2 class="section_title">Contact Me</h2>
             <span class="section_subtitle">Get in touch</span>
-                <p class="contact_description" style="margin: auto; margin-left: 5rem; margin-right: 5rem; text-align: center; margin-bottom: 5rem; justify-content: center;" >Feel free to contact me regarding any projects you have in mind.<br> I am eager to discuss your unique requirements and collaborate on delivering innovative solutions that meet your needs.<br> Together, we can transform your ideas into successful endeavors that drive efficiency, enhance user experiences,<br> and propel your organization forward. Reach out to me today to start a conversation about your next project.</p>
+                <p class="contact_description" style="margin: auto; margin-left: 5rem; margin-right: 5rem; text-align: center; margin-bottom: 5rem; justify-content: center;" >Feel free to contact me regarding any projects you have in mind.<br> I am eager to discuss your unique requirements and collaborate on<br> delivering innovative solutions that meet your needs.<br> Reach out to me today to start a conversation about your next project.</p>
             <div class="contact_container container grid">
                 <div>
                     <div class="contact_information">
