fixing alot of animation issue

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
                 <div class="nav_toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
-
             </div>
         </nav>
     </header>
@@ -779,7 +778,6 @@
         <section class="contact section" id="contact">
             <h2 class="section_title">Contact Me</h2>
             <span class="section_subtitle">Get in touch</span>
-                <p class="contact_description" style="margin: auto; margin-left: 5rem; margin-right: 5rem; text-align: center; margin-bottom: 5rem; justify-content: center;" >Feel free to contact me regarding any projects you have in mind.<br> I am eager to discuss your unique requirements and collaborate on<br> delivering innovative solutions that meet your needs.<br> Reach out to me today to start a conversation about your next project.</p>
             <div class="contact_container container grid">
                 <div>
                     <div class="contact_information">
@@ -838,11 +836,11 @@
         </section>
         <script>
 
-            ScrollReveal({ distance: '40px', duration: 2000, delay: 100 });
+            ScrollReveal({ distance: '40px', duration: 1000, delay: 100 });
             // Nav Bar
-            ScrollReveal().reveal('.nav_logo, .nav_item, .nav_btns',{delay : 100, interval: 1 });
+            ScrollReveal().reveal('.nav_logo, .nav_item, .nav_btns, .nav_toggle, .nav_menu, .theme_button, .nav-toggle',{delay : 100, interval: 1 });
             // Home Title,Img,Subtitle,Button,scrollicon
-            ScrollReveal().reveal('.home_title, .home_data, .home_scroll, .home_subtitle,.button , .home_scroll',{ reset: true, delay : 200, interval: 100});
+            ScrollReveal().reveal('.home_title, .home_data, .home_scroll, .home_subtitle, .home_scroll',{ reset: true, delay : 200, interval: 100});
             ScrollReveal().reveal('.home_img',{ reset: true, delay : 300});
             // Home Social
             ScrollReveal().reveal('.home_social-icon, .home_social',{ reset: true, delay : 100, origin: 'left', interval: 100 });
@@ -850,18 +848,23 @@
             // Section Title and subtitle
             ScrollReveal().reveal('.section_title, .section_subtitle',{ reset: true, delay : 200 });
             // About Me
-            ScrollReveal().reveal('.about_img, .about_data, .about_info, .about_info-name, .about_buttons',{ reset: true, delay : 100, interval: 100});
+            ScrollReveal().reveal('.about_img, .about_data, .about_info, .about_info-name, .about_button',{ reset: true, delay : 100, interval: 100});
             // Skills
             ScrollReveal().reveal('.skills_content, .skills_titles',{ reset: true, delay : 100, interval: 100 });
             ScrollReveal().reveal('.skills_name, .skills_number, .skills_bar, .skills_percentage',{ reset: true, origin: 'left',  delay : 100, interval: 100 });
             // Qualification
             ScrollReveal().reveal('.qualification_button, .qualification_title, .qualification_subtitle, .qualification_calendar',{ reset: true, delay : 100, interval: 100 });
-            ScrollReveal().reveal('.qualification_rounder',{ reset: true, origin: 'right', delay : 100, interval: 100 });
-            ScrollReveal().reveal('.qualification_line',{ reset: true, origin: 'left',delay : 100, interval: 100 });
+            ScrollReveal().reveal('.qualification_rounder',{ reset: true, delay : 100, interval: 100 });
+            ScrollReveal().reveal('.qualification_line',{ reset: true, delay : 100, interval: 100 });
             // Services
-            ScrollReveal().reveal('.services_container, .services_content, .services_button, .services_icon, .services_title',{ reset: true, delay : 100, interval: 100 });
+            ScrollReveal().reveal('.services_button, .services_icon, .services_title',{ reset: true, delay : 100, interval: 100 });
             // Portfolio
-            ScrollReveal().reveal('.swiper-button-next, .swiper-button-prev, .swiper-pagination, .swiper-pagination-bullets, .portfolio_img, .portfolio_title, .portfolio_description, .porfolio_buttons',{ reset: true,delay : 100, interval: 100 });
+            // ScrollReveal().reveal('.portfolio_section .portfolio_content, .portfolio_button',{ reset: true, delay : 100, interval: 100 });
+            // project in mind
+            ScrollReveal().reveal('.project_title, .project_description, .project_button',{ reset: true, delay : 100, interval: 100 });
+            ScrollReveal().reveal('.project_img',{ reset: true, origin: 'right', delay : 100, interval: 100 });
+            // contact me
+            ScrollReveal().reveal('.contact_information, .contact_form, .contact_button',{ reset: true, delay : 100, interval: 100 });
 
 
         </script>
