remove some animation on some parts

--- a/index.html
+++ b/index.html
@@ -836,9 +836,9 @@
         </section>
         <script>
 
-            ScrollReveal({ distance: '40px', duration: 1000, delay: 100 });
+            ScrollReveal({ distance: '40px', duration: 1200, delay: 100 });
             // Nav Bar
-            ScrollReveal().reveal('.nav_logo, .nav_item, .nav_btns, .nav_toggle, .nav_menu, .theme_button, .nav-toggle',{delay : 100, interval: 1 });
+            // didnt include because it wont show on phone so gotta disable too lazy to fix why it does that ;P
             // Home Title,Img,Subtitle,Button,scrollicon
             ScrollReveal().reveal('.home_title, .home_data, .home_scroll, .home_subtitle, .home_scroll',{ reset: true, delay : 200, interval: 100});
             ScrollReveal().reveal('.home_img',{ reset: true, delay : 300});
@@ -846,25 +846,25 @@
             ScrollReveal().reveal('.home_social-icon, .home_social',{ reset: true, delay : 100, origin: 'left', interval: 100 });
             ScrollReveal().reveal('.social_title',{ reset: true, delay : 100, origin: 'right', });
             // Section Title and subtitle
-            ScrollReveal().reveal('.section_title, .section_subtitle',{ reset: true, delay : 200 });
+            ScrollReveal().reveal('.section_title, .section_subtitle',{ delay : 200 });
             // About Me
-            ScrollReveal().reveal('.about_img, .about_data, .about_info, .about_info-name, .about_button',{ reset: true, delay : 100, interval: 100});
+            ScrollReveal().reveal('.about_img, .about_data, .about_info, .about_info-name, .about_button',{  delay : 100, interval: 100});
             // Skills
-            ScrollReveal().reveal('.skills_content, .skills_titles',{ reset: true, delay : 100, interval: 100 });
-            ScrollReveal().reveal('.skills_name, .skills_number, .skills_bar, .skills_percentage',{ reset: true, origin: 'left',  delay : 100, interval: 100 });
+            ScrollReveal().reveal('.skills_content, .skills_titles',{  delay : 100, interval: 100 });
+            ScrollReveal().reveal('.skills_name, .skills_number, .skills_bar, .skills_percentage',{  origin: 'left',  delay : 100, interval: 100 });
             // Qualification
-            ScrollReveal().reveal('.qualification_button, .qualification_title, .qualification_subtitle, .qualification_calendar',{ reset: true, delay : 100, interval: 100 });
-            ScrollReveal().reveal('.qualification_rounder',{ reset: true, delay : 100, interval: 100 });
-            ScrollReveal().reveal('.qualification_line',{ reset: true, delay : 100, interval: 100 });
+            ScrollReveal().reveal('.qualification_button, .qualification_title, .qualification_subtitle, .qualification_calendar',{ delay : 100, interval: 100 });
+            ScrollReveal().reveal('.qualification_rounder',{  delay : 100, interval: 100 });
+            ScrollReveal().reveal('.qualification_line',{  delay : 100, interval: 100 });
             // Services
-            ScrollReveal().reveal('.services_button, .services_icon, .services_title',{ reset: true, delay : 100, interval: 100 });
+            ScrollReveal().reveal('.services_button, .services_icon, .services_title',{ delay : 100, interval: 100 });
             // Portfolio
             // ScrollReveal().reveal('.portfolio_section .portfolio_content, .portfolio_button',{ reset: true, delay : 100, interval: 100 });
             // project in mind
-            ScrollReveal().reveal('.project_title, .project_description, .project_button',{ reset: true, delay : 100, interval: 100 });
-            ScrollReveal().reveal('.project_img',{ reset: true, origin: 'right', delay : 100, interval: 100 });
+            ScrollReveal().reveal('.project_title, .project_description, .project_button',{ delay : 100, interval: 100 });
+            ScrollReveal().reveal('.project_img',{ origin: 'right', delay : 100, interval: 100 });
             // contact me
-            ScrollReveal().reveal('.contact_information, .contact_form, .contact_button',{ reset: true, delay : 100, interval: 100 });
+            ScrollReveal().reveal('.contact_information, .contact_form, .contact_button',{ delay : 100, interval: 100 });
 
 
         </script>
