--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="bar"></div>
+        <div class="counter">0</div>
+    </div>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
@@ -921,6 +925,33 @@
     <script defer src="assets/js/main.js"></script>
 
 </body>
+<script src=" https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript">
+
+    $(document).ready(function() {
+        let count = 0;
+    let counter = setInterval(function(){
+        let counter = parseInt($('.counter').text());
+        // $('.counter').text((++c).toString());
+        if (count < 101) {
+            $('.counter').text(count + '%');
+            count++
+        }
+    },60)
+    gsap.to('.preloader', 1, {
+        delay: 7,
+        opacity: 0,
+        ease: Expo.EaseInOut
+    });gsap.to('.preloader', 1, {
+        delay: 8,
+        y: ("-100%"),
+        ease: Expo.EaseIn
+    });
+
+    counter()
+    })
+</script>
 <script src="https://unpkg.com/kursor"></script>
 <script>
     new kursor({
