--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                         <a href="https://twitter.com/home" target="_blank" class="home_social-icon">
                             <i class="uil uil-twitter-alt"></i>
                         </a>
+                        <a href="https://www.youtube.com/channel/UC1WX4A_zpwg4CUD1UbP6b_g" target="_blank" class="home_social-icon">
+                            <i class="uil uil-youtube"></i>
+                        </a>
                         <p class="social_title"><span class="qualification_rounder"></span> Follow My Socials...</p>
                     </div>
                     <div class="home_img">
@@ -924,6 +927,7 @@
     <!--==================== MAIN JS ====================-->
     <script defer src="assets/js/main.js"></script>
 
+    <!--==================== preloader js ====================-->
     <script src="./assets/js/preloader.js"></script>
 
 </body>
@@ -961,6 +965,7 @@
             <!-- for the custom cursor the user sees -->
 
 <script src="https://unpkg.com/kursor"></script>
+
 <script>
     new kursor({
     type: 3,
