--- a/index.html
+++ b/index.html
@@ -910,6 +910,9 @@
                     <a href="https://twitter.com/XindregNollor" target="_blank" class="footer_social">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
+                    <a href="https://www.youtube.com/channel/UC1WX4A_zpwg4CUD1UbP6b_g" target="_blank" class="footer_social">
+                        <i class="uil uil-youtube"></i>
+                    </a>
                 </div>
             </div>
             <p class="footer_copy">&#169;2023 Designed by - GendrixRollon All Right Reserved</p>
